added logo on the sidebar

--- a/study.html
+++ b/study.html
@@ -10,7 +10,8 @@
     <div class="big-container">
       <div class="container">
         <div class="dashboard-logo">
-          <p>LOGO</p>
+          <img src="./assets/alien-outline.svg" class="sidebar-logo">
+          <p class="logo-text">LOGO</p>
         </div>
         <div class="options-1">
           <ul>
