added icons to the sidebar, change sidebar color and dimentions, added min-width and max-width

--- a/study.html
+++ b/study.html
@@ -15,19 +15,19 @@
         </div>
         <div class="options-1">
           <ul>
-            <li>LIST</li>
-            <li>LIST</li>
-            <li>LIST</li>
-            <li>LIST</li>
-            <li>LIST</li>
-            <li>LIST</li>
+            <li><span>🏠</span>LIST</li>
+            <li><span>🪪</span>LIST</li>
+            <li><span>🗨️</span>LIST</li>
+            <li><span>🕓</span>LIST</li>
+            <li><span>📑</span>LIST</li>
+            <li><span>🤼</span>LIST</li>
           </ul>
         </div>
         <div class="options-2">
           <ul>
-            <li>LIST</li>
-            <li>LIST</li>
-            <li>LIST</li>
+            <li><span>⚙️</span>LIST</li>
+            <li><span>❔</span>LIST</li>
+            <li><span>🛡️</span>LIST</li>
           </ul>
         </div>
       </div>
