change sidebar paragraph to a href link and change the color to white

--- a/study.html
+++ b/study.html
@@ -15,12 +15,12 @@
         </div>
         <div class="options-1">
           <ul>
-            <li><span>🏠</span>LIST</li>
-            <li><span>🪪</span>LIST</li>
-            <li><span>🗨️</span>LIST</li>
-            <li><span>🕓</span>LIST</li>
-            <li><span>📑</span>LIST</li>
-            <li><span>🤼</span>LIST</li>
+            <li><span>🏠</span><a href="">Home</a></li>
+            <li><span>🪪</span><a href="">Profile</a></li>
+            <li><span>🗨️</span><a href="">Messages</a></li>
+            <li><span>🕓</span><a href="">History</a></li>
+            <li><span>📑</span><a href="">Tasks</a></li>
+            <li><span>🤼</span><a href="">Communities</a></li>
           </ul>
         </div>
         <div class="options-2">
