--- a/study.html
+++ b/study.html
@@ -10,7 +10,7 @@
     <div class="big-container">
       <div class="container">
         <div class="dashboard-logo">
-          <img src="./assets/alien-outline.svg" class="sidebar-logo">
+          <img src="./assets/alien-outline.svg" class="sidebar-logo" />
           <p class="logo-text">LOGO</p>
         </div>
         <div class="options-1">
@@ -25,9 +25,9 @@
         </div>
         <div class="options-2">
           <ul>
-            <li><span>⚙️</span>LIST</li>
-            <li><span>❔</span>LIST</li>
-            <li><span>🛡️</span>LIST</li>
+            <li><span>⚙️</span><a href="">Settings</a></li>
+            <li><span>❔</span><a href="">Support</a></li>
+            <li><span>🛡️</span><a href="">Privacy</a></li>
           </ul>
         </div>
       </div>
@@ -35,7 +35,9 @@
       <div class="container-2">
         <div class="top-bar">
           <div class="top-bar-one">
-            <div class="search-bar">Search-bar</div>
+            <div class="search-bar">
+              <span>🔍</span><input type="text" class="input-box">
+            </div>
             <div class="profile-section">Profile picture</div>
           </div>
           <div class="top-bar-two">
