added profile picture, username, and centering the top section using flexbox

--- a/study.html
+++ b/study.html
@@ -38,7 +38,11 @@
             <div class="search-bar">
               <span>🔍</span><input type="text" class="input-box">
             </div>
-            <div class="profile-section">Profile picture</div>
+            <div class="profile-section">
+              <span>🔔</span>
+              <div class="profile-picture"><img src="./assets/profile-pict.jpg" alt="profile-picture"></div>
+              <div class="user-name">Deandra Hanifa</div>
+            </div>
           </div>
           <div class="top-bar-two">
             <div>
