added topbar greeting with profile picture

--- a/study.html
+++ b/study.html
@@ -36,18 +36,25 @@
         <div class="top-bar">
           <div class="top-bar-one">
             <div class="search-bar">
-              <span>🔍</span><input type="text" class="input-box">
+              <span>🔍</span><input type="text" class="input-box" />
             </div>
             <div class="profile-section">
               <span>🔔</span>
-              <div class="profile-picture"><img src="./assets/profile-pict.jpg" alt="profile-picture"></div>
+              <div class="profile-picture">
+                <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+              </div>
               <div class="user-name">Deandra Hanifa</div>
             </div>
           </div>
           <div class="top-bar-two">
-            <div>
-              <p>img</p>
-              <p>hi there</p>
+            <div class="greeting-section">
+              <div class="profile-picture">
+                <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+              </div>
+              <div class="greeting-text">
+                <div class="text-1">Hi, there</div>
+                <div class="text-2">Deandra Hanifa</div>
+              </div>
             </div>
 
             <div>
