style topbar buttons and refactored some css

--- a/study.html
+++ b/study.html
@@ -52,15 +52,15 @@
                 <img src="./assets/profile-pict.jpg" alt="profile-picture" />
               </div>
               <div class="greeting-text">
-                <div class="text-1">Hi, there</div>
-                <div class="text-2">Deandra Hanifa</div>
+                <div class="text-1">Hi there,</div>
+                <div class="text-2">Deandra Hanifa (@Deandra)</div>
               </div>
             </div>
 
-            <div>
-              <p>new</p>
-              <p>upload</p>
-              <p>share</p>
+            <div class="buttons-section">
+              <button class="btn-new">New</button>
+              <button class="btn-upload">Upload</button>
+              <button class="btn-share">Share</button>
             </div>
           </div>
         </div>
