Set up layout for main content, anouncement and trending section

--- a/study.html
+++ b/study.html
@@ -64,7 +64,14 @@
             </div>
           </div>
         </div>
-        <div class="main-content">test</div>
+
+        <div class="main-content">
+          <div class="your-projects">Your Projects</div>
+          <div class="right-bar">
+            <div class="anouncement">Anouncement</div>
+            <div class="trending">Trending</div>
+          </div>
+        </div>
       </div>
     </div>
 
