CSS for anouncement and trending section

--- a/study.html
+++ b/study.html
@@ -68,8 +68,19 @@
         <div class="main-content">
           <div class="your-projects">Your Projects</div>
           <div class="right-bar">
-            <div class="anouncement">Anouncement</div>
-            <div class="trending">Trending</div>
+            <span>Anouncement</span>
+            <div class="anouncement">
+              <div class="anouncement-content">asd</div>
+              <div class="anouncement-content">asd</div>
+              <div class="anouncement-content">asd</div>
+            </div>
+            <span>Trending</span>
+            <div class="trending">
+              <div class="trending-content">asd</div>
+              <div class="trending-content">asd</div>
+              <div class="trending-content">asd</div>
+
+            </div>
           </div>
         </div>
       </div>
