anouncement texts, headings, and remove anouncement box height (automatically follows its content)

--- a/study.html
+++ b/study.html
@@ -70,15 +70,39 @@
           <div class="right-bar">
             <span>Anouncement</span>
             <div class="anouncement">
-              <div class="anouncement-content">asd</div>
-              <div class="anouncement-content">asd</div>
-              <div class="anouncement-content">asd</div>
+              <div class="anouncement-content">
+                <label>Site Maintenance</label>
+                <p class="article">There are many variations of passages of Lorem Ipsum available, 
+                  but the majority have suffered alteration in some form, 
+                  by injected humour, or randomised words which don't look even slightly believable.</p>
+              </div>
+              <div class="anouncement-content">
+                <label>Community Share Day</label>
+                <p class="article">There are many variations of passages of Lorem Ipsum available, 
+                  but the majority have suffered alteration in some form, 
+                  by injected humour, or randomised words which don't look even slightly believable.</p>
+              </div>
+              <div class="anouncement-content">
+                <label>Updated Privacy Policy</label>
+                <p class="article">There are many variations of passages of Lorem Ipsum available, 
+                  but the majority have suffered alteration in some form, 
+                  by injected humour, or randomised words which don't look even slightly believable.</p>
+              </div>
             </div>
             <span>Trending</span>
             <div class="trending">
-              <div class="trending-content">asd</div>
-              <div class="trending-content">asd</div>
-              <div class="trending-content">asd</div>
+              <div class="trending-content">
+                <label>rere</label>
+                <p class="article">Site maintenance</p>
+              </div>
+              <div class="trending-content">
+                <label>rere</label>
+                <p class="article">Site maintenance</p>
+              </div>
+              <div class="trending-content">
+                <label>rere</label>
+                <p class="article">Site maintenance</p>
+              </div>
 
             </div>
           </div>
