added the content for the trending section

--- a/study.html
+++ b/study.html
@@ -92,16 +92,20 @@
             <span>Trending</span>
             <div class="trending">
               <div class="trending-content">
-                <label>rere</label>
-                <p class="article">Site maintenance</p>
+                <label>@tegan</label>
+                <p class="article">World Peace Builder</p>
               </div>
               <div class="trending-content">
-                <label>rere</label>
-                <p class="article">Site maintenance</p>
+                <label>@heydhey</label>
+                <p class="article">What could've been</p>
               </div>
               <div class="trending-content">
-                <label>rere</label>
-                <p class="article">Site maintenance</p>
+                <label>@tarrss</label>
+                <p class="article">A dumbass</p>
+              </div>
+              <div class="trending-content">
+                <label>@hudahuu</label>
+                <p class="article">Dumbass number two</p>
               </div>
 
             </div>
