trending secition profile picture and flex

--- a/study.html
+++ b/study.html
@@ -72,42 +72,70 @@
             <div class="anouncement">
               <div class="anouncement-content">
                 <label>Site Maintenance</label>
-                <p class="article">There are many variations of passages of Lorem Ipsum available, 
-                  but the majority have suffered alteration in some form, 
-                  by injected humour, or randomised words which don't look even slightly believable.</p>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
               </div>
               <div class="anouncement-content">
                 <label>Community Share Day</label>
-                <p class="article">There are many variations of passages of Lorem Ipsum available, 
-                  but the majority have suffered alteration in some form, 
-                  by injected humour, or randomised words which don't look even slightly believable.</p>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
               </div>
               <div class="anouncement-content">
                 <label>Updated Privacy Policy</label>
-                <p class="article">There are many variations of passages of Lorem Ipsum available, 
-                  but the majority have suffered alteration in some form, 
-                  by injected humour, or randomised words which don't look even slightly believable.</p>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
               </div>
             </div>
             <span>Trending</span>
             <div class="trending">
               <div class="trending-content">
-                <label>@tegan</label>
-                <p class="article">World Peace Builder</p>
+                <div class="profile-picture">
+                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                </div>
+                <div class="trending-account">
+                  <label>@tegan</label>
+                  <p class="article">World Peace Builder</p>
+                </div>
               </div>
               <div class="trending-content">
-                <label>@heydhey</label>
-                <p class="article">What could've been</p>
+                <div class="profile-picture">
+                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                </div>
+                <div class="trending-account">
+                  <label>@heydhey</label>
+                  <p class="article">What could've been</p>
+                </div>
               </div>
               <div class="trending-content">
-                <label>@tarrss</label>
-                <p class="article">A dumbass</p>
+                <div class="profile-picture">
+                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                </div>
+                <div class="trending-account">
+                  <label>@tarrss</label>
+                  <p class="article">A dumbass</p>
+                </div>
               </div>
               <div class="trending-content">
-                <label>@hudahuu</label>
-                <p class="article">Dumbass number two</p>
+                <div class="profile-picture">
+                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                </div>
+                <div class="trending-account">
+                  <label>@hudahuu</label>
+                  <p class="article">Dumbass number two</p>
+                </div>
               </div>
-
             </div>
           </div>
         </div>
