profile picture object fit so its a perfect cirlce and the image is not stretched

--- a/study.html
+++ b/study.html
@@ -102,7 +102,7 @@
             <div class="trending">
               <div class="trending-content">
                 <div class="profile-picture">
-                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                  <img src="./assets/pp1.jpg" alt="profile-picture" />
                 </div>
                 <div class="trending-account">
                   <label>@tegan</label>
@@ -111,7 +111,7 @@
               </div>
               <div class="trending-content">
                 <div class="profile-picture">
-                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                  <img src="./assets/pp2.jpg" alt="profile-picture" />
                 </div>
                 <div class="trending-account">
                   <label>@heydhey</label>
@@ -120,7 +120,7 @@
               </div>
               <div class="trending-content">
                 <div class="profile-picture">
-                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                  <img src="./assets/pp3.jpg" alt="profile-picture" />
                 </div>
                 <div class="trending-account">
                   <label>@tarrss</label>
@@ -129,7 +129,7 @@
               </div>
               <div class="trending-content">
                 <div class="profile-picture">
-                  <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                  <img src="./assets/pp4.jpg" alt="profile-picture" />
                 </div>
                 <div class="trending-account">
                   <label>@hudahuu</label>
