--- a/study.html
+++ b/study.html
@@ -66,7 +66,70 @@
         </div>
 
         <div class="main-content">
-          <div class="your-projects">Your Projects</div>
+          <div class="your-projects">
+            <p>Your Projects</p>
+            <div class="projects-list">
+              <div class="project-content">
+                <h3>Site Maintenance</h3>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
+              </div>
+
+              <div class="project-content">
+                <h3>Site Maintenance</h3>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
+              </div>
+
+              <div class="project-content">
+                <h3>Site Maintenance</h3>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
+              </div>
+
+              <div class="project-content">
+                <h3>Site Maintenance</h3>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
+              </div>
+
+              <div class="project-content">
+                <h3>Site Maintenance</h3>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
+              </div>
+              
+              <div class="project-content">
+                <h3>Site Maintenance</h3>
+                <p class="article">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, or randomised words which don't look
+                  even slightly believable.
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="right-bar">
             <span>Anouncement</span>
             <div class="anouncement">
