Reconfigure flexbox for the main content

--- a/study.html
+++ b/study.html
@@ -73,9 +73,7 @@
                 <h3>Site Maintenance</h3>
                 <p class="article">
                   There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
+                  available,
                 </p>
               </div>
 
@@ -83,9 +81,7 @@
                 <h3>Site Maintenance</h3>
                 <p class="article">
                   There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
+                  available,
                 </p>
               </div>
 
@@ -93,9 +89,20 @@
                 <h3>Site Maintenance</h3>
                 <p class="article">
                   There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
+                  available, There are many variations of passages of Lorem Ipsum
+                  available, 
+                  There are many variations of passages of Lorem Ipsum
+                  available, 
+                  There are many variations of passages of Lorem Ipsum
+                  available, 
+                  There are many variations of passages of Lorem Ipsum
+                  available, 
+                  There are many variations of passages of Lorem Ipsum
+                  available, 
+                  There are many variations of passages of Lorem Ipsum
+                  available, 
+                  There are many variations of passages of Lorem Ipsum
+                  available, 
                 </p>
               </div>
 
