--- a/study.html
+++ b/study.html
@@ -70,70 +70,106 @@
             <p>Your Projects</p>
             <div class="projects-list">
               <div class="project-content">
-                <h3>Site Maintenance</h3>
-                <p class="article">
-                  There are many variations of passages of Lorem Ipsum
-                  available,
-                </p>
+                <div class="title-text">
+                  <h3>Site Maintenance</h3>
+                  <p class="article">
+                    There are many variations of passages of Lorem Ipsum
+                    available,
+                  </p>
+                </div>
+                <div class="icons">
+                  <span>⭐</span>
+                  <span>👁️</span>
+                  <span>↪️</span>
+                </div>
               </div>
 
               <div class="project-content">
-                <h3>Site Maintenance</h3>
-                <p class="article">
-                  There are many variations of passages of Lorem Ipsum
-                  available,
-                </p>
+                <div class="title-text">
+                  <h3>Site Maintenance</h3>
+                  <p class="article">
+                    There are many variations of passages of Lorem Ipsum
+                    available,
+                  </p>
+                </div>
+                <div class="icons">
+                  <span>⭐</span>
+                  <span>👁️</span>
+                  <span>↪️</span>
+                </div>
               </div>
 
               <div class="project-content">
-                <h3>Site Maintenance</h3>
-                <p class="article">
-                  There are many variations of passages of Lorem Ipsum
-                  available, There are many variations of passages of Lorem Ipsum
-                  available, 
-                  There are many variations of passages of Lorem Ipsum
-                  available, 
-                  There are many variations of passages of Lorem Ipsum
-                  available, 
-                  There are many variations of passages of Lorem Ipsum
-                  available, 
-                  There are many variations of passages of Lorem Ipsum
-                  available, 
-                  There are many variations of passages of Lorem Ipsum
-                  available, 
-                  There are many variations of passages of Lorem Ipsum
-                  available, 
-                </p>
+                <div class="title-text">
+                  <h3>Site Maintenance</h3>
+                  <p class="article">
+                    There are many variations of passages of Lorem Ipsum
+                    available, There are many variations of passages of Lorem
+                    Ipsum available, There are many variations of passages of
+                    Lorem Ipsum available, There are many variations of passages
+                    of Lorem Ipsum available, There are many variations of
+                    passages of Lorem Ipsum available, There are many variations
+                    of passages of Lorem Ipsum available, There are many
+                    variations of passages of Lorem Ipsum available, There are
+                    many variations of passages of Lorem Ipsum available,
+                  </p>
+                </div>
+                <div class="icons">
+                  <span>⭐</span>
+                  <span>👁️</span>
+                  <span>↪️</span>
+                </div>
               </div>
 
               <div class="project-content">
-                <h3>Site Maintenance</h3>
-                <p class="article">
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
-                </p>
+                <div class="title-text">
+                  <h3>Site Maintenance</h3>
+                  <p class="article">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words which don't
+                    look even slightly believable.
+                  </p>
+                </div>
+                <div class="icons">
+                  <span>⭐</span>
+                  <span>👁️</span>
+                  <span>↪️</span>
+                </div>
               </div>
 
               <div class="project-content">
-                <h3>Site Maintenance</h3>
-                <p class="article">
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
-                </p>
+                <div class="title-text">
+                  <h3>Site Maintenance</h3>
+                  <p class="article">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words which don't
+                    look even slightly believable.
+                  </p>
+                </div>
+                <div class="icons">
+                  <span>⭐</span>
+                  <span>👁️</span>
+                  <span>↪️</span>
+                </div>
               </div>
-              
+
               <div class="project-content">
-                <h3>Site Maintenance</h3>
-                <p class="article">
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
-                </p>
+                <div class="title-text">
+                  <h3>Site Maintenance</h3>
+                  <p class="article">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words which don't
+                    look even slightly believable.
+                  </p>
+                </div>
+                <div class="icons">
+                  <span>⭐</span>
+                  <span>👁️</span>
+                  <span>↪️</span>
+                </div>
               </div>
             </div>
           </div>
