Changed font, paddings for the section names

--- a/study.html
+++ b/study.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="dashboard-logo">
           <img src="./assets/alien-outline.svg" class="sidebar-logo" />
-          <p class="logo-text">LOGO</p>
+          <p class="logo-text">Dashboard</p>
         </div>
         <div class="options-1">
           <ul>
@@ -67,7 +67,7 @@
 
         <div class="main-content">
           <div class="your-projects">
-            <p>Your Projects</p>
+            <span>Your Projects</span>
             <div class="projects-list">
               <div class="project-content">
                 <div class="title-text">
@@ -173,6 +173,7 @@
               </div>
             </div>
           </div>
+
           <div class="right-bar">
             <span>Anouncement</span>
             <div class="anouncement">
@@ -204,6 +205,7 @@
                 </p>
               </div>
             </div>
+
             <span>Trending</span>
             <div class="trending">
               <div class="trending-content">
