Changed icons to svg icons

--- a/study.html
+++ b/study.html
@@ -10,24 +10,24 @@
     <div class="big-container">
       <div class="container">
         <div class="dashboard-logo">
-          <img src="./assets/alien-outline.svg" class="sidebar-logo" />
+          <img src="./assets/alpha-m.svg" class="sidebar-logo" />
           <p class="logo-text">Dashboard</p>
         </div>
         <div class="options-1">
           <ul>
-            <li><span>🏠</span><a href="">Home</a></li>
-            <li><span>🪪</span><a href="">Profile</a></li>
-            <li><span>🗨️</span><a href="">Messages</a></li>
-            <li><span>🕓</span><a href="">History</a></li>
-            <li><span>📑</span><a href="">Tasks</a></li>
-            <li><span>🤼</span><a href="">Communities</a></li>
+            <li><img src="./assets/house.svg" alt=""><a href="">Home</a></li>
+            <li><img src="./assets/user-round.svg" alt=""><a href="">Profile</a></li>
+            <li><img src="./assets/message-circle-more.svg" alt=""><a href="">Messages</a></li>
+            <li><img src="./assets/history.svg" alt=""><a href="">History</a></li>
+            <li><img src="./assets/circle-check-big.svg" alt=""><a href="">Tasks</a></li>
+            <li><img src="./assets/users-round.svg" alt=""><a href="">Communities</a></li>
           </ul>
         </div>
         <div class="options-2">
           <ul>
-            <li><span>⚙️</span><a href="">Settings</a></li>
-            <li><span>❔</span><a href="">Support</a></li>
-            <li><span>🛡️</span><a href="">Privacy</a></li>
+            <li><img src="./assets/settings.svg" alt=""><a href="">Settings</a></li>
+            <li><img src="./assets/circle-help.svg" alt=""><a href="">Support</a></li>
+            <li><img src="./assets/shield-alert.svg" alt=""><a href="">Privacy</a></li>
           </ul>
         </div>
       </div>
@@ -36,7 +36,7 @@
         <div class="top-bar">
           <div class="top-bar-one">
             <div class="search-bar">
-              <span>🔍</span><input type="text" class="input-box" />
+              <img src="./assets/search.svg" alt=""><input type="text" class="input-box" />
             </div>
             <div class="profile-section">
               <span>🔔</span>
