--- a/study.html
+++ b/study.html
@@ -36,7 +36,7 @@
         <div class="top-bar">
           <div class="top-bar-one">
             <div class="search-bar">
-              <img src="./assets/search.svg" alt=""><input type="text" class="input-box" />
+              <img src="./assets/search.svg" alt=""><input type="text" class="input-box" placeholder="Search"/>
             </div>
             <div class="profile-section">
               <span>🔔</span>
@@ -72,7 +72,7 @@
               <div class="project-content">
                 <div class="title-text">
                   <h3>Site Maintenance</h3>
-                  <p class="article">
+                  <p class="text">
                     There are many variations of passages of Lorem Ipsum
                     available,
                   </p>
@@ -87,7 +87,7 @@
               <div class="project-content">
                 <div class="title-text">
                   <h3>Site Maintenance</h3>
-                  <p class="article">
+                  <p class="text">
                     There are many variations of passages of Lorem Ipsum
                     available,
                   </p>
@@ -102,7 +102,7 @@
               <div class="project-content">
                 <div class="title-text">
                   <h3>Site Maintenance</h3>
-                  <p class="article">
+                  <p class="text">
                     There are many variations of passages of Lorem Ipsum
                     available, There are many variations of passages of Lorem
                     Ipsum available, There are many variations of passages of
@@ -124,7 +124,7 @@
               <div class="project-content">
                 <div class="title-text">
                   <h3>Site Maintenance</h3>
-                  <p class="article">
+                  <p class="text">
                     There are many variations of passages of Lorem Ipsum
                     available, but the majority have suffered alteration in some
                     form, by injected humour, or randomised words which don't
@@ -141,7 +141,7 @@
               <div class="project-content">
                 <div class="title-text">
                   <h3>Site Maintenance</h3>
-                  <p class="article">
+                  <p class="text">
                     There are many variations of passages of Lorem Ipsum
                     available, but the majority have suffered alteration in some
                     form, by injected humour, or randomised words which don't
@@ -158,7 +158,7 @@
               <div class="project-content">
                 <div class="title-text">
                   <h3>Site Maintenance</h3>
-                  <p class="article">
+                  <p class="text">
                     There are many variations of passages of Lorem Ipsum
                     available, but the majority have suffered alteration in some
                     form, by injected humour, or randomised words which don't
@@ -179,7 +179,7 @@
             <div class="anouncement">
               <div class="anouncement-content">
                 <label>Site Maintenance</label>
-                <p class="article">
+                <p class="text">
                   There are many variations of passages of Lorem Ipsum
                   available, but the majority have suffered alteration in some
                   form, by injected humour, or randomised words which don't look
@@ -188,7 +188,7 @@
               </div>
               <div class="anouncement-content">
                 <label>Community Share Day</label>
-                <p class="article">
+                <p class="text">
                   There are many variations of passages of Lorem Ipsum
                   available, but the majority have suffered alteration in some
                   form, by injected humour, or randomised words which don't look
@@ -197,7 +197,7 @@
               </div>
               <div class="anouncement-content">
                 <label>Updated Privacy Policy</label>
-                <p class="article">
+                <p class="text">
                   There are many variations of passages of Lorem Ipsum
                   available, but the majority have suffered alteration in some
                   form, by injected humour, or randomised words which don't look
@@ -214,7 +214,7 @@
                 </div>
                 <div class="trending-account">
                   <label>@tegan</label>
-                  <p class="article">World Peace Builder</p>
+                  <p class="text">World Peace Builder</p>
                 </div>
               </div>
               <div class="trending-content">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="trending-account">
                   <label>@heydhey</label>
-                  <p class="article">What could've been</p>
+                  <p class="text">What could've been</p>
                 </div>
               </div>
               <div class="trending-content">
@@ -232,7 +232,7 @@
                 </div>
                 <div class="trending-account">
                   <label>@tarrss</label>
-                  <p class="article">A dumbass</p>
+                  <p class="text">A dumbass</p>
                 </div>
               </div>
               <div class="trending-content">
@@ -241,7 +241,7 @@
                 </div>
                 <div class="trending-account">
                   <label>@hudahuu</label>
-                  <p class="article">Dumbass number two</p>
+                  <p class="text">Dumbass number two</p>
                 </div>
               </div>
             </div>
