--- a/study.html
+++ b/study.html
@@ -39,9 +39,9 @@
               <img src="./assets/search.svg" alt=""><input type="text" class="input-box" placeholder="Search"/>
             </div>
             <div class="profile-section">
-              <span>🔔</span>
+              <img src="./assets/bell.svg" alt="">
               <div class="profile-picture">
-                <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                <img class="top-right-pp" src="./assets/profile-pict.jpg" alt="profile-picture" />
               </div>
               <div class="user-name">Deandra Hanifa</div>
             </div>
@@ -49,7 +49,7 @@
           <div class="top-bar-two">
             <div class="greeting-section">
               <div class="profile-picture">
-                <img src="./assets/profile-pict.jpg" alt="profile-picture" />
+                <img class="top-center-pp" src="./assets/profile-pict.jpg" alt="profile-picture" />
               </div>
               <div class="greeting-text">
                 <div class="text-1">Hi there,</div>
